feat 1.优化 配置结构 2.添加 自定义倒计时音效 3.添加 自定义垃圾箱方块容器